trustfall_core/test_data/tests/valid_queries/typename_output.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Zero {
        __typename @output
    }
}"#,
    arguments: {},
)
