trustfall_core/test_data/tests/parse_errors/output_name_with_spaces.graphql.ron
TestGraphQLQuery (
    schema_name: "filesystem",
    query: r#"
{
    OriginDirectory {
        name @output(name: "name with spaces")
    }
}"#,
    arguments: {},
)
